Fix incorrect schema in detached sessions.

Note that in testing I notice that adding/deleting Schemata result in
unpleasant behavior.

BUG: 98472

svn path=/trunk/kdebase/konsole/; revision=406942